docs: mark TIPs 1004, 1006, 1007 as Approved (#2367)
## Summary
Updates TIP status from Draft to Approved for TIPs 1004, 1006, and 1007.

## Motivation
These TIPs have been reviewed and approved by the product team (mallesh,
dan, dankrad) and are ready for engineering implementation.

## Changes
- tip-1004.md: status Draft -> Approved
- tip-1006.md: status Draft -> Approved
- tip-1007.md: status Draft -> Approved

--- a/tips/tip-1006.md
+++ b/tips/tip-1006.md
@@ -3,7 +3,7 @@ id: TIP-1006
 title: Burn At for TIP-20 Tokens
 description: The burnAt function for TIP-20 tokens, enabling authorized administrators to burn tokens from any address.
 authors: Dan Robinson
-status: Draft
+status: Approved
 ---
 
 # TIP-1006: Burn At for TIP-20 Tokens
